<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#F5A9A9">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/wrongAnsLayout"
        android:layout_alignBottom="@+id/nextButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sorryText"
            android:id="@+id/sorryText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/rightAnsText"
            android:layout_below="@+id/sorryText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textSize="30dp"
            android:gravity="center|center_horizontal"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextButton"
            android:id="@+id/nextButton"
            android:textSize="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learnMoreButtonText"
            android:id="@+id/learnMoreButton"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:background="#F5A9A9"
            android:singleLine="false" />
    </GridLayout>
</RelativeLayout>