<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main"
    android:background="#045FB4">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_container"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/mainLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeText"
            android:id="@+id/homeText"
            android:textSize="50dp"
            android:gravity="center|top"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/fragment_container"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_marginBottom="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz1"
            android:id="@+id/quiz1Button"
            android:clickable="true"
            android:textSize="35dp"
            android:background="#FFFFFF"
            android:textStyle="italic"
            android:padding="15dp"
            android:textColor="#045FB4"
            android:layout_alignTop="@+id/quiz2Button"
            android:layout_toLeftOf="@+id/homeText"
            android:layout_toStartOf="@+id/homeText"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz2"
            android:id="@+id/quiz2Button"
            android:clickable="true"
            android:textSize="35dp"
            android:background="#FFFFFF"
            android:textStyle="italic"
            android:padding="15dp"
            android:textColor="#045FB4"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_below="@+id/mainLayout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

    </GridLayout>

</RelativeLayout>
